# vuno

./: .gitignore  .npmrc  ARCHITECTURE.md  COMMANDS.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  turbo.json  vite.config.ts
src/: app.html  global.css  main.rs  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/src/: api.rs  buffer.rs  command_processor.rs  commands.rs  config.rs  copilot.rs  git.rs  hotkeys.rs  key_manager.rs  lsp.rs  main.rs  perplexity.rs  window.rs
src-tauri/wix/: file-associations.wxs
src/lib/: copilotCommands.ts  enhancedKeyHandler.ts  tauriCommands.ts  tauriKeyHandler.ts
src/modules/: AIAssistantPanel.svelte  AIOutputPanel.svelte  BottomOutput.svelte  CommandBar.svelte  CopilotPanel.svelte  DiagnosticsPanel.svelte  Editor.svelte  EnhancedCommandBar.svelte  GitPanel.svelte  HelpWindow.svelte  InlineCommandBar.svelte  MarkdownRenderer.svelte  OutputPanel.svelte  SyntaxHighlighter.ts  Toast.svelte  TutorialWindow.svelte  outputPanelStore.ts  toastStore.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: appState.ts  eventBus.ts
