[package]
name = "vuno"
version = "0.0.1"
edition = "2021"
description = "vuno is a terminal-style text editor, with people in mind."
authors = ["Max Lee Abdurrahman As-Salafi Carter <undivisible@vk.com>"]

[dependencies]
slint = "1.9.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "vuno"
path = "src/main.rs"
