[package]
name = "vuno"
version = "0.1.0"
description = "the simple, unitary text editor for the modern age, designed by humans for humans."
authors = ["Max Lee Abdurrahman As-Salafi Carter <undivisible@vk.com>"]
license = "MPL-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "shell-execute", "cli", "window-all", "fs-all", "path-all", "notification-all", "dialog-all", "shell-open", "global-shortcut" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "5.0.0"
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tree-sitter = "0.20.10"
ropey = "1.6.1"
tower-lsp = "0.20.0"
parking_lot = "0.12.1"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"
chrono = { version = "0.4.34", features = ["serde"] }
global-hotkey = "0.4.1"
device_query = "2.0.0"
once_cell = "1.19.0"
uuid = { version = "1.6.1", features = ["v4"] }
dashmap = "5.5.3"
regex = "1.10.2"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
portable = ["tauri/updater"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
debug = false
overflow-checks = false
debug-assertions = false
incremental = false

[profile.release.package."*"]
opt-level = 3

